Fixed up networking bugs, added scrollbar

--- a/alphafrontend/src/suggestions.css
+++ b/alphafrontend/src/suggestions.css
@@ -43,7 +43,7 @@
     width: 100%;
     margin: 0;
     padding: 0;
-
+    overflow-y: auto;
 }
 
 .Results {
